--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ビデオアップロード</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.krnk.org/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container mt-5">
@@ -24,36 +24,59 @@
         </div>
         <button type="submit" class="btn btn-primary">アップロード</button>
     </form>
+    <div class="progress mt-3" style="height: 20px;">
+        <div id="progressBar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
     <div id="result" class="mt-3"></div>
 </div>
 
 <script>
-document.getElementById('uploadForm').addEventListener('submit', async (e) => {
+document.getElementById('uploadForm').addEventListener('submit', (e) => {
     e.preventDefault();
+
     const formData = new FormData(e.target);
-    try {
-        const response = await fetch('/upload', {
-            method: 'POST',
-            body: formData,
-        });
-        const result = await response.json();
-        const resultDiv = document.getElementById('result');
-        resultDiv.innerHTML = `
-            <div class="alert alert-success">
-                アップロード成功: <a href="${result.url}" target="_blank">ビデオを見る</a>
-                <button id="copyButton" class="btn btn-secondary btn-sm">URLをコピー</button>
-            </div>
-        `;
-        document.getElementById('copyButton').addEventListener('click', () => {
-            navigator.clipboard.writeText(result.url).then(() => {
-                alert('URLがクリップボードにコピーされました');
-            }).catch(err => {
-                console.error('クリップボードにコピーできませんでした:', err);
+    const xhr = new XMLHttpRequest();
+
+    xhr.open('POST', '/upload', true);
+
+    xhr.upload.onprogress = (event) => {
+        if (event.lengthComputable) {
+            const percentComplete = (event.loaded / event.total) * 100;
+            const progressBar = document.getElementById('progressBar');
+            progressBar.style.width = percentComplete + '%';
+            progressBar.setAttribute('aria-valuenow', percentComplete);
+        }
+    };
+
+    xhr.onload = () => {
+        if (xhr.status === 200) {
+            const result = JSON.parse(xhr.responseText);
+            const resultDiv = document.getElementById('result');
+            resultDiv.innerHTML = `
+                <div class="alert alert-success">
+                    アップロード成功: <a href="${result.url}" target="_blank">ビデオを見る</a>
+                    <button id="copyButton" class="btn btn-secondary btn-sm">URLをコピー</button>
+                </div>
+            `;
+            document.getElementById('copyButton').addEventListener('click', () => {
+                navigator.clipboard.writeText(result.url).then(() => {
+                    alert('URLがクリップボードにコピーされました');
+                }).catch(err => {
+                    console.error('クリップボードにコピーできませんでした:', err);
+                });
             });
-        });
-    } catch (error) {
+            // 進捗バーをリセット
+            document.getElementById('progressBar').style.width = '0%';
+        } else {
+            document.getElementById('result').innerHTML = `<div class="alert alert-danger">エラーが発生しました。</div>`;
+        }
+    };
+
+    xhr.onerror = () => {
         document.getElementById('result').innerHTML = `<div class="alert alert-danger">エラーが発生しました。</div>`;
-    }
+    };
+
+    xhr.send(formData);
 });
 </script>
 </body>
